--- a/figuras.html
+++ b/figuras.html
@@ -7,9 +7,20 @@
     <title>Figuras Geometricas</title>
 </head>
 <body>
-    <h1>
-        Figuras Geometricas
-    </h1>
+    <header>
+        <h1>Figuras Geométricas</h1>
+        <p>Este es el primer tallet del curso práctico de JavaScript</p>
+    </header>
+    <section>
+        <h2>Calcular el área y perímetro de un cuadrado</h2>
+        <form action="">
+            <label for="InputCuadrado">Escribe cuánto mide el lado de tu cuadrado:</label>
+            <input id="InputCuadrado" type="number">
+            <button type="button" onclick="calcularPerimetroCuadrado()">Calcular el perímetro</button>
+            <button type="button" onclick="calcularAreaCuadrado()">Calcular el área</button>
+        </form>
+    </section>
+
 
     <script src="figuras.js"></script>
 </body>
