Agregando input para cupon

--- a/Descuentos/descuentos.html
+++ b/Descuentos/descuentos.html
@@ -17,6 +17,7 @@
    <section>
        <h2>Calcula el precio a pagar de tus productos con descuento:</h2>
        <form action="">
+           <img class="img_form" src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fdestinoreinounido.com%2Fwp-content%2Fuploads%2F2016%2F01%2FDescuentos-y-promos.jpg&f=1&nofb=1" alt="">
            <div class="labelContainer">
             <img src="https://img.icons8.com/material-outlined/48/000000/us-dollar-circled--v2.png"/>
             <label for="inputPrice">Escribe el precio de tu producto:</label>
@@ -27,6 +28,11 @@
             <label for="inputDiscount">Escribe el porcentaje de descuento:</label>
            </div>
            <input id ="inputDiscount" type="number">
+           <div class="labelContainer">
+            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fbarberialospits.com%2Fweb%2Fwp-content%2Fuploads%2F2019%2F06%2Fdescuento-cupon-digital-biko-salon-costa-rica.png&f=1&nofb=1"/>
+            <label for="inputCupon">Escribe el precio de tu producto:</label>
+           </div>
+           <input id="inputCupon" type="number">
            <button type="button" onclick="buttonPriceDescount()">Calcular precio con descuento</button>
            <p id="result" class="result"></p>
        </form>
