--- a/Descuentos/descuentos.html
+++ b/Descuentos/descuentos.html
@@ -25,14 +25,9 @@
            <input id="inputPrice" type="number">
            <div class="labelContainer">
             <img src="https://img.icons8.com/offices/30/000000/percentage.png"/>
-            <label for="inputDiscount">Escribe el porcentaje de descuento:</label>
+            <label for="inputCupon">Escribe el porcentaje de descuento:</label>
            </div>
-           <input id ="inputDiscount" type="number">
-           <div class="labelContainer">
-            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fbarberialospits.com%2Fweb%2Fwp-content%2Fuploads%2F2019%2F06%2Fdescuento-cupon-digital-biko-salon-costa-rica.png&f=1&nofb=1"/>
-            <label for="inputCupon">Escribe el precio de tu producto:</label>
-           </div>
-           <input id="inputCupon" type="number">
+           <input id ="inputCupon" type="number">
            <button type="button" onclick="buttonPriceDescount()">Calcular precio con descuento</button>
            <p id="result" class="result"></p>
        </form>
