--- a/Descuentos/descuentos.html
+++ b/Descuentos/descuentos.html
@@ -25,12 +25,19 @@
            <input id="inputPrice" type="number">
            <div class="labelContainer">
             <img src="https://img.icons8.com/offices/30/000000/percentage.png"/>
-            <label for="inputCupon">Escribe el porcentaje de descuento:</label>
+            <label for="inputCupon">Escribe el codigo del cupon:</label>
            </div>
-           <input id ="inputCupon" type="number">
+           <input id ="inputCupon" type="text">
            <button type="button" onclick="buttonPriceDescount()">Calcular precio con descuento</button>
            <p id="result" class="result"></p>
        </form>
+       <ul>
+           <li>Codigo: cupon1 Descuento: 12% </li>
+           <li>Codigo: XCDed3 Descuento: 32%</li>
+           <li>Codigo: Platzi20 Descuento: 20%</li>
+           <li>Codigo: SasoHdz12 Descuento: 15%</li>
+           <li>Codigo: cupon343 Descuento: 18%</li>
+       </ul>
    </section>
     
 
