--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso Practico JS</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/tablet.css" media="(min-width: 768px)">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 </head>
 <body>
     <header>
@@ -15,8 +17,8 @@
             <img class="platziLogo" src="https://lucasfrezzini.github.io/platzi-curso-practico-javascript/assets/img/platzi.webp" alt="Platzi">
        </div>
        <div class="contacto">
-           <span class="icon twitter"></span>
-           <span class="icon linkedin"></span>
+           <a class="icon twitter" href="https://twitter.com/SasoHdz" target="_blank"></a>
+           <a class="icon linkedin" href="https://www.linkedin.com/in/isaac-hern%C3%A1ndez-res%C3%A9ndiz-274024214" target="_blank"></a>
             <h1>
                 @SasoHdz
             </h1>
