--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h3>Curso Práctico de <br> JavaScript</h3>
             <div class="container_temas">
                 <p class="container_title">
-                    <strong>Temas visto en el curso:</strong>
+                    <strong>Temas vistos en el curso:</strong>
                 </p>
                 <ul>
                     <li>Manipulación del DOM</li>
@@ -57,7 +57,7 @@
             <div id = "container1" onmouseenter="colorNoSelect('container1','img1')" onmouseleave="desSelect()" class="containerTaller" >
                 <img id="img1" src="https://lucasfrezzini.github.io/platzi-curso-practico-javascript/assets/img/circle.png" alt="Figura">
                 <div class="containerTaller_Description">
-                    <h3>TALLER #1</h3>
+                    <a href="./Figuras/figuras.html" target="_blank" rel="noopener noreferrer"><h3>TALLER #1</h3></a>
                     <p class="title_description">
                         Figuras Geometricas
                     </p>
@@ -69,7 +69,7 @@
             <div id = "container2" onmouseenter="colorNoSelect('container2','img2')" onmouseleave="desSelect()" class="containerTaller">
                 <img id="img2" src="https://lucasfrezzini.github.io/platzi-curso-practico-javascript/assets/img/price.png" alt="precio">
                 <div class="containerTaller_Description">
-                    <h3>TALLER #2</h3>
+                   <a href="./Descuentos/descuentos.html" target="_blank" rel="noopener noreferrer"><h3>TALLER #2</h3></a> 
                     <p class="title_description">
                         Precios y descuentos
                     </p>
@@ -82,7 +82,7 @@
             <div id = "container3" onmouseenter="colorNoSelect('container3','img3')" onmouseleave="desSelect()" class="containerTaller">
                 <img id="img3" src="https://lucasfrezzini.github.io/platzi-curso-practico-javascript/assets/img/discount.png" alt="Porcentaje">
                 <div class="containerTaller_Description">
-                    <h3>TALLER #3</h3>
+                   <a href="./PromedioMedianaModa/calculos.html" target="_blank" rel="noopener noreferrer"><h3>TALLER #3</h3></a>
                     <p class="title_description">
                         Promedios, Moda y Mediana
                     </p>
@@ -94,7 +94,7 @@
             <div id = "container4" onmouseenter="colorNoSelect('container4','img4')" onmouseleave="desSelect()" class="containerTaller">
                 <img id="img4" src="https://lucasfrezzini.github.io/platzi-curso-practico-javascript/assets/img/dollar.png" alt="Dinero">
                 <div class="containerTaller_Description">
-                    <h3>TALLER #4</h3>
+                    <a href="./Salarios/salarios.html" target="_blank" rel="noopener noreferrer"><h3>TALLER #4</h3></a>
                     <p class="title_description">
                         Analisis Salarial
                     </p>
