--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         Figuras Geometricas
                     </p>
                     <p class="description">
-                        Calculo básico para Cuadrados, Triangulos y Circulos.
+                        Calcula el área y perímetro de Cuadrados, Triángulos y Circulos.
                     </p>
                 </div>
             </div>
@@ -75,8 +75,7 @@
                         Precios y descuentos
                     </p>
                     <p class="description">
-                        Calculo básico para precios, descuentos y cupones
-                        de pago.
+                        Calcula descuentos a productos, utiliza los cupones propuestos en la pagina y obtén descuentos.
                     </p>
                 </div>
             </div>
@@ -88,7 +87,7 @@
                         Promedios, Moda y Mediana
                     </p>
                     <p class="description">
-                        Calculos básicos y avanzados.
+                        Calcula el promedio, moda y mediana de un conjunto de datos.
                     </p>
                 </div>
             </div>
@@ -97,11 +96,10 @@
                 <div class="containerTaller_Description">
                     <a href="./Salarios/salarios.html" target="_blank" rel="noopener noreferrer"><h3>TALLER #4</h3></a>
                     <p class="title_description">
-                        Analisis Salarial
+                        Analisis de Deuda
                     </p>
                     <p class="description">
-                        Calculo básico para trabajar con Salarios (medianas
-                        y top 10%)
+                       Calcula por que cantidad es lo ideal para endeudarte.
                     </p>
                 </div>
             </div>
