--- a/Descuentos/descuentos.html
+++ b/Descuentos/descuentos.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Porcentajes y Descuentos</title>
     <link rel="stylesheet" href="./descuentos.css">
+    <link rel="shortcut icon" href="../favicon.png">
 </head>
 <body>
    <header>
@@ -22,12 +23,12 @@
             <img src="https://img.icons8.com/material-outlined/48/000000/us-dollar-circled--v2.png"/>
             <label for="inputPrice">Escribe el precio de tu producto:</label>
            </div>
-           <input id="inputPrice" type="number">
+           <input id="inputPrice" type="number" required>
            <div class="labelContainer">
             <img src="https://img.icons8.com/offices/30/000000/percentage.png"/>
             <label for="inputCupon">Escribe el codigo del cupon:</label>
            </div>
-           <input id ="inputCupon" type="text">
+           <input id ="inputCupon" type="text" required>
            <button type="button" onclick="buttonPriceDescount()">Calcular precio con descuento</button>
            <p id="result" class="result"></p>
        </form>
